# gas

./: .gitignore  CMakeLists.txt  LICENSE  backend_common.hpp  basic.slang  frontend.cpp  gas.cpp  gas.hpp  gas.inl  gas_fwd.hpp  gas_imgui.cpp  gas_imgui.hpp  gas_ui.cpp  gas_ui.hpp  gas_ui.inl  gen.cpp  gen.hpp  gui.cpp  gui.hpp  gui.inl  imgui.slang  init.cpp  init.hpp  linux.hpp  mem.cpp  mem.hpp  namespace.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_compiler.inl  uuid.hpp  wgpu.cpp  wgpu.hpp  wgpu_init.hpp  wgpu_shader_compiler.cpp  wgpu_shader_compiler.hpp  windows.hpp
cmake/: gas-find-deps.cmake  gas-setup-deps.cmake  gas-setup-standalone.cmake
examples/: CMakeLists.txt  basic.slang  example_renderer.cpp  global_param_block.slang  utils.slang
test/: CMakeLists.txt  gas_table.cpp  gpu_tmp_input.cpp  swapchain.cpp  test_gpu.hpp  test_gpu_main.cpp  tmp_input.slang  uuid.cpp
